🔧 Aligned first nft with heading & fix wSOL to SOL

--- a/styles/pages/NFTGallery.module.scss
+++ b/styles/pages/NFTGallery.module.scss
@@ -32,7 +32,7 @@
     border-radius: 10px;
     height: 530px;
     width: 320px;
-    margin: 30px;
+    margin-right: 30px;
     transition: .2s ease-out;
     position: relative;
     > section {
